--- a/core/templates/core/vue/status-page-style.html
+++ b/core/templates/core/vue/status-page-style.html
@@ -30,7 +30,7 @@
       height: 33px;
       margin: 1px;
     }
-    
+  
     .ln110 {
       width: 110px;
     }
@@ -50,11 +50,17 @@
     }
   
     .tag-list {
-      height: 80vh;
+      height: calc(100vh - 160px);
       overflow-y: scroll;
+      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none;  /* IE 10+ */
+  }
+    .tag-list::-webkit-scrollbar { /* WebKit */
+        width: 0;
+        height: 0;
     }
   
-    .row-button {
+  .row-button {
     background-color:whitesmoke;
     color: black;
   }
@@ -64,8 +70,14 @@
     color: black;
   }
   .content-table {
-    max-height: 600px;
-    overflow-y: auto;
+    max-height: calc(100vh - 200px);
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none;  /* IE 10+ */
+  }
+  .content-table::-webkit-scrollbar { /* WebKit */
+      width: 0;
+      height: 0;
   }
   
   .sample-table {
