--- a/core/templates/core/vue/status-tutorial.html
+++ b/core/templates/core/vue/status-tutorial.html
@@ -1,7 +1,8 @@
 <div>
-    <b-modal id="modal-1" scrollable ok-only title="Guide to Analysis Status Page v.0.0.1">
-      <h4>Hi! :)</h4>
-      <h5>Welcome to Analysis Pipeline Status Page.</h5>
+  <md-dialog :md-active.sync="showDialog">
+      <md-dialog-title>Hi! :) Welcome to Analysis Pipeline Status Page.</md-dialog-title>
+
+      <md-dialog-content>
       <p>
         This is <b>BETA</b>, and there are still a lot of work to be done.<br>
       </p>
@@ -46,6 +47,13 @@
         For an analysis to be considered imported, it needs to have lane number equal or greater than requested number of lanes.<br>
       </p>
       <br>
+      <h6>Give me Filter</h6>
+      <p>
+        Analysis Status table offers some basic filtering functions. Try clicking<br>
+        <md-button>Filter <md-icon>filter_list</md-icon></md-button> 
+        to see what options of filters are avaliable.<br>
+      </p>
+      <br>
       <h6>Pipeline Status</h6>
       <p>
         So you can see 2 columns named <b>Pipeline</b> and <b>Pseudobulk</b>.<br>
@@ -79,5 +87,9 @@
         <small>Or idk maybe people will utterly hate this page and we will just remove and it throw away undone. Like many other things in my life.</small>
 
       </p>
-    </b-modal>
+      </md-dialog-content>
+      <md-dialog-actions>
+          <md-button class="md-primary" @click="showDialog = false">Close</md-button>
+      </md-dialog-actions>
+    </md-dialog>
   </div>
