--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -64,7 +64,7 @@
                             </div>
                         </form>
                     </ul>
-                    <button class="btn btn-danger navbar-btn" style="float: right;" ><a style="color: white;" href="{% url 'core:pipeline_status' %}">Status <span class="badge">BETA</span></a></button>
+                    <a style="color: white;" href="{% url 'core:pipeline_status' %}"><button class="btn btn-danger navbar-btn" style="float: right;" >Status <span class="badge">BETA</span></button></a>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav><br>
