--- a/core/templates/core/vue/status-page-style.html
+++ b/core/templates/core/vue/status-page-style.html
@@ -5,11 +5,7 @@
     }
   
     .page-container {
-      height: 100%;
-    }
-    .md-app {
-      height: 100%;
-      border: 1px solid rgba(#000, .12);
+      height: 100vh;
     }
   
      
@@ -18,80 +14,53 @@
       max-width: calc(100vw - 125px);
       height: 100%;
     }
-  
-    .pipeline-tag {
-      height: 100vh;
-      text-align: center;
+    
+    .project-list {
+      overflow: auto;
+      height: calc(100% - 120px);
     }
-    .project-button {
-      border: none;
-      background-color: #a9a9b0;
-      width: 160px;
-      height: 33px;
-      margin: 1px;
+
+    .project-list .md-list-item {
+      margin: 0;
+      height: 50px;
     }
-  
-    .ln110 {
-      width: 110px;
+
+    .ln140 {
+      min-width: 140px;
     }
-  
     .ln100 {
-      width: 100px;
+      min-width: 100px;
+    }
+    .ln120 {
+      min-width: 120px;
     }
   
-    .ln130 {
-      width: 130px;
+    .ln180 {
+      min-width: 180px;
     }
-    .sample-name {
-    font-size: 10px;
-    text-align: left;
-    font-weight: 800;
-    width:140px;
+    
+    .md-table-cell {
+      min-width: 140px;
     }
-  
+
     .tag-list {
       height: calc(100vh - 160px);
       overflow-y: scroll;
       scrollbar-width: none; /* Firefox */
       -ms-overflow-style: none;  /* IE 10+ */
-  }
+    }
     .tag-list::-webkit-scrollbar { /* WebKit */
         width: 0;
         height: 0;
     }
   
-  .row-button {
-    background-color:whitesmoke;
-    color: black;
-  }
-  
-  .menu-button {
-    background-color:rgb(190, 182, 182);
-    color: black;
-  }
-  .content-table {
-    max-height: calc(100vh - 200px);
-    overflow-y: scroll;
-    scrollbar-width: none; /* Firefox */
-      -ms-overflow-style: none;  /* IE 10+ */
-  }
-  .content-table::-webkit-scrollbar { /* WebKit */
-      width: 0;
-      height: 0;
-  }
-  
-  .sample-table {
-    text-align: center;
-    border-radius: 5px;
-    padding: 2px;
-    min-width: 1280px;
-  }
-  
-  .main-content {
-    overflow-x: auto;
-    width: 95%;
-  }
-  
+    .md-table-fixed-header {
+      background-color: #eceff1;
+    }
+
+    .sample-table {
+      overflow-x: auto;
+    }  
   
   </style>
   
